# The_app-backend

./: .env  .env.example  .gitignore  .pylintrc  README.md  _linter_config.py  db_data.json  docker-compose.yml  domain_choice.txt  git_flow_test.py  mypy.ini  pyproject.toml  pytest.ini  reqirements.txt
catalog/: _models.py  admin.py  db_data.json  forms.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_remove_product_catalog_pro__catego_3076da_idx_and_more.py  0003_product_is_on_sale.py
catalog/services/: slug_service.py
catalog/services/validators/: schema.py  variant.py
catalog/tests/: test_models.py
docs/: django-fixtures-workflow.md  domain_choice.md
the_app/: Dockerfile  entrypoint.sh  settings.py  urls.py  wsgi.py
the_app/the_app/: asgi.py  settings.py
the_app/utils/: mixins.py
