[project]
name = "the-app-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "highlander-95",email = "nogin.pavlo@lll.kpi.ua"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.7,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
