[project]
name = "the_app"
version = "0.1.0"
description = ""
authors = [
    {name = "highlander-95",email = "nogin.pavlo@lll.kpi.ua"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "django-allauth (>=65.13.0,<66.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "elasticsearch (>=9.2.0,<10.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-versatileimagefield (>=3.1,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "django-silk (>=5.4.3,<6.0.0)",
    "codespell (>=2.4.1,<3.0.0)"
]
